src/objects/NQT_Assign_Backup_Person__c.object
<CustomObject>
    <fields>
        <fullName>NQT_Availability_Status__c</fullName>
        <inlineHelpText>please select value</inlineHelpText>
        <label>Your Availability Status</label>
        <picklist>
            <picklistValues>
                <fullName>Out of office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Un Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_Backup_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select Backup Person:</inlineHelpText>
        <label>Backup Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assign_Backup_Person</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NQT_From__c</fullName>
        <inlineHelpText>Please enter date</inlineHelpText>
        <label>From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NQT_Related_CPR__c</fullName>
        <label>Related CPR</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NQT_To__c</fullName>
        <inlineHelpText>Please enter a date</inlineHelpText>
        <label>Through</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>NQT Assign Backup Person</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ABP-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assign Backup Person(Admin)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>